# picoGPT

./: gpt2.py  pyproject.toml
